# deeplearning-fundemental

./: backward.py  pyproject.toml
neural_network/: activation_functions.py  data.py  layers.py  loss_functions.py  main.ipynb  main.py  utils.py
neural_network/neural_network/: main.py  model.py  optimizers.py  pyproject.toml  utils.py
