[tool.poetry]
name = "neural_network"
version = "0.1.0"
description = ""
authors = ["lexuancuong <cuongle.software@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
progressbar = "^2.5"
matplotlib = "^3.5.1"
terminaltables = "^3.1.10"
scikit-learn = "^1.0.2"
tabulate = "^0.8.9"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
